--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,7 +1,7 @@
 .Weather {
-    border: 1px solid #dadde1;
+    border: 1px solid #9e2fd2;
     font-family: arial, sans-serif;
-    color: #878787;
+    color: #c56efc;
     padding: 16px;
     margin: 30px auto;
     border-radius: 4px;
@@ -37,7 +37,7 @@
 .Weather .temperature {
     font-weight: bold;
     color: rgb(33, 33, 33);
-    font-size: 64px;
+    font-size: 78px;
     font-weight: 400;
     line-height: 55px;
     position: relative;
