--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,10 +1,10 @@
 .Weather {
-    border: 1px solid #9e2fd2;
+    border: 1px solid rgb(158, 47, 210);
     font-family: arial, sans-serif;
-    color: #c56efc;
+    color: rgb(158, 47, 210);
     padding: 16px;
     margin: 30px auto;
-    margin-top: 10px;
+    margin-top: 30px;
     border-radius: 4px;
 }
 
@@ -37,8 +37,8 @@
 
 .Weather .temperature {
     font-weight: bold;
-    color: rgb(33, 33, 33);
-    font-size: 78px;
+    color: rgb(158, 47, 210);
+    font-size: 68px;
     font-weight: 400;
     line-height: 55px;
     position: relative;
@@ -47,7 +47,7 @@
 }
 
 .Weather .unit {
-    color: rgb(33, 33, 33);
+    color: rgb(158, 47, 210);
     font-size: 16px;
     font-weight: 400;
     margin-left: 5px;
@@ -55,4 +55,12 @@
     position: relative;
     top: -90px;
     left: 55px;
+}
+
+.btn-primary {
+    background-color: rgb(158, 47, 210);
+    width: 542px;
+    height: 35px;
+    border-radius: 10px;
+    border: none;
 }
