--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,16 +1,16 @@
 .Weather {
-    border: 1px solid rgb(158, 47, 210);
+    border: 2px solid rgb(158, 47, 210);
     font-family: arial, sans-serif;
     color: rgb(158, 47, 210);
     padding: 16px;
     margin: 30px auto;
     margin-top: 30px;
-    border-radius: 4px;
+    border-radius: 6px;
 }
 
 .Weather h1 {
     font-size: 24px;
-    font-weight: 100;
+    font-weight: bold;
     height: 28px;
     line-height: 29px;
     margin: 20px 0 0 0;
@@ -48,8 +48,8 @@
 
 .Weather .unit {
     color: rgb(158, 47, 210);
-    font-size: 16px;
-    font-weight: 400;
+    font-size: 18px;
+    font-weight: bold;
     margin-left: 5px;
     line-height: 1;
     position: relative;
@@ -63,4 +63,13 @@
     height: 35px;
     border-radius: 10px;
     border: none;
+    color: #fff;
+}
+
+.form-input {
+    width: 542px;
+    height: 35px;
+    border-radius: 10px;
+    border: 1px;
+    color: rgb(158, 47, 210);
 }
