--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,8 @@
 }
 
 .App footer {
-    font-size: 11px;
+    font-size: 15px;
     margin: 10px 0;
     text-align: center;
+    color: rgb(158, 47, 210);
 }
