--- a/src/Weather.css
+++ b/src/Weather.css
@@ -71,5 +71,6 @@
     height: 35px;
     border-radius: 10px;
     border: 1px;
+    border-color: rgb(158, 47, 210);
     color: rgb(158, 47, 210);
 }
